<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/titlebar_height"
    android:background="@color/titlebar_background"
    android:id="@+id/title_bar">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/titlebar_btn_padding"
        android:paddingRight="@dimen/titlebar_btn_padding"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/fa_bar"
        android:textSize="@dimen/titlebar_btn_size"
        android:id="@+id/title_bar_menu_btn"
        android:textColor="@color/titlebar_text_color" />
	
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/hello_world"
        android:textSize="@dimen/titlebar_text_size"
        android:id="@+id/title_bar_text_menu"
        android:textColor="@color/titlebar_text_color"
        android:typeface="monospace" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/titlebar_btn_padding"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/fa_cog"
        android:textSize="@dimen/titlebar_btn_size"
        android:id="@+id/title_bar_left_first_btn"
        android:textColor="@color/titlebar_text_color"
        android:paddingLeft="@dimen/titlebar_btn_padding" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/titlebar_btn_padding"
        android:layout_toLeftOf="@id/title_bar_left_first_btn"
        android:layout_centerVertical="true"
        android:textSize="@dimen/titlebar_btn_size"
        android:id="@+id/title_bar_left_sec_btn"
        android:textColor="@color/titlebar_text_color"/>

</RelativeLayout>
