<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:id="@+id/scrollcontents"
	    android:paddingLeft="1dp"
	    android:paddingRight="1dp" >

    	<LinearLayout
            android:id="@+id/contentslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@android:color/white"
		        android:orientation="vertical"
		        android:padding="5dp"
		        android:paddingTop="10dp" >

		        <TextView
		            android:id="@+id/contentstitle"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/no_contents"
		            android:textColor="@color/title_text"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:textSize="20sp" />

		        <TextView
		            android:id="@+id/contentsuserid"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentBottom="true"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@id/contentstitle"
		            android:paddingBottom="5dp"
		            android:paddingLeft="50dp"
		            android:paddingTop="5dp"
		            android:text="@string/id"
		            android:textColor="@color/title_text"
		            android:textSize="12sp" />

		        <TextView
		            android:id="@+id/contentstime"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentBottom="true"
		            android:layout_alignParentRight="true"
		            android:layout_below="@id/contentstitle"
		            android:paddingBottom="5dp"
		            android:paddingRight="5dp"
		            android:paddingTop="5dp"
		            android:text="@string/time"
		            android:textColor="@color/title_text"
		            android:textSize="12sp" />
	            
	        </RelativeLayout>
	        
            <LinearLayout
                android:id="@+id/contents_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingLeft="2dp"
                android:orientation="vertical"
                android:background="@android:color/white" >

                <TextView
                    android:id="@+id/contents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/title_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

	        </LinearLayout>
	        
	       	<LinearLayout
	       	    android:id="@+id/commentlist"
	       	    android:layout_width="match_parent"
	       	    android:layout_height="wrap_content"
	       	    android:dividerPadding="1dp"
	       	    android:orientation="vertical"
	       	    android:showDividers="beginning" >

	        </LinearLayout>
        </LinearLayout>
	</ScrollView>
	
	<SlidingDrawer
        android:id="@+id/slide_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/slide_content"
        android:handle="@+id/slide_handle"
        android:layout_alignParentBottom="true"
        android:allowSingleTap="true"
        android:animateOnClick="true" >

        <Button
            android:id="@+id/slide_handle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/hello_world" />"

        <RelativeLayout
            android:id="@+id/slide_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sliding_background"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:id="@+id/slide_comment_text"
                android:text="@string/slide_comment_text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sliding_comment_text_size" />
            

            <EditText
                android:id="@+id/slide_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/slide_comment_text"
                android:ems="1"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" >
                <requestFocus />
            </EditText>"

        </RelativeLayout>
    </SlidingDrawer>

	<FrameLayout
	    android:id="@+id/Frame_no_contents"
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" >
        
	    <TextView 
	        android:gravity="center"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/no_contents"
	        android:textSize="20sp" />
	</FrameLayout>
    
</RelativeLayout>
